syntax = "proto3";

option go_package = "./pb";

package pb;

message PlayerLoginReq {
  string player_id = 1;
  string game_id = 2;
}

message CsLoginReq{
  string user_name = 1;
  string password = 2;
}

message LoginResp {
  string access_token = 1;
  int64  access_expire = 2;
  int64  refresh_after = 3;
  string  url = 4;
}

service gateway {
  rpc playerLogin (PlayerLoginReq)returns(LoginResp);
  rpc csLogin (CsLoginReq)returns(LoginResp);
}